--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 body {
   padding: 1rem;
   text-align: center;
-  background-color: #fafafa;
+  background-color: #1dbf14;
   display: flex;
   flex-direction: column;
   justify-content: center;
