--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ header {
   padding: 0.5rem;
   width: 100%;
   color: white;
-  background-color: black;
+  background-color: rgb(27, 10, 112);
 }
 
 .delete-btn {
